--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "server.js",
   "scripts": {
     "server" : "node server.js",
-    "start" : "nodemon server.js",
-    "client" : "npm run start --prefix client",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "start" : "nodemon server.js"
   },
-  "author": "Ritul",
+  "author": "Parsh Technology",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
