--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "todo",
+  "name": "Server",
   "version": "1.0.0",
-  "description": "A simple todo app with MERN stack",
+  "description": "Task of Parsh Technologies",
   "main": "server.js",
   "scripts": {
-    "server" : "node server.js",
-    "start" : "nodemon server.js"
+    "server": "node server.js",
+    "start": "nodemon server.js"
   },
   "author": "Parsh Technology",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.7.14"
+    "formik": "^2.4.5",
+    "mongoose": "^5.7.14",
+    "nodemon": "^3.0.1"
   }
 }
